@@ -1,4 +1,4 @@
-package main.java.com.mg;
+package com.mg;
 
 import java.io.BufferedWriter;
 import java.io.IOException;
@@ -10,63 +10,62 @@ import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.List;
 
-import static main.java.com.mg.Syllabizer.*;
+import static com.mg.Syllabizer.syllabize;
 
 public class Main {
 
     public static void main(String[] args) {
 
-        List<Path> txtFilePaths = new ArrayList<>();
-        List<Path> docFilePaths = new ArrayList<>();
-        List<Path> docxFilePaths = new ArrayList<>();
+        List<Path> filePaths = new ArrayList<>();
 
         try {
-            Path initialPath = Paths.get(".");
-
-            txtFilePaths = FileSearcher.searchRegularFilesStartsWith(initialPath, "", ".txt");
-            docFilePaths = FileSearcher.searchRegularFilesStartsWith(initialPath, "", ".doc");
-            docxFilePaths = FileSearcher.searchRegularFilesStartsWith(initialPath, "", ".docx");
-
+            Path paths = Path.of(System.getProperty("app.resource"));
+            filePaths.addAll(FileSearcher.searchRegularFilesStartsWith(paths, "", ".txt"));
+            filePaths.addAll(FileSearcher.searchRegularFilesStartsWith(paths, "", ".doc"));
+            filePaths.addAll(FileSearcher.searchRegularFilesStartsWith(paths, "", ".docx"));
+        } catch (java.io.IOException e) {
+            System.out.println("No matching files found.");
         }
-        catch (java.io.IOException e){System.out.println("No matching files found.");}
 
-
-        try {sylabizeAllTypeFiles(txtFilePaths,docFilePaths, docxFilePaths); }
-        catch (java.io.IOException e){System.out.println(e.getClass() + e.getMessage());}
-
+        try {
+            sylabizeAndSaveFile(filePaths);
+        } catch (java.io.IOException e) {
+            System.out.println(e.getClass() + e.getMessage());
+        }
     }
 
     private static void writeSyllabizedFile(Path path, List<String> list) throws IOException {
-
-
         String[] pathElements = path.toString().split("\\.");
         Path outputPath = Paths.get(pathElements[0] + "Syllabized." + "txt");
         Files.write(outputPath, list, Charset.forName("Windows-1250"), StandardOpenOption.CREATE);
-         try (BufferedWriter  writer = Files.newBufferedWriter(outputPath)) {
+        try (BufferedWriter writer = Files.newBufferedWriter(outputPath)) {
 
             for (String word : list) {
-            writer.write(word);
+                writer.write(word);
             }
-         }
-    }
-    private static void sylabizeAllTypeFiles(List<Path> txtFilePaths,   List<Path> docFilePaths,   List<Path> docxFilePaths) throws java.io.IOException {
-
-        for (Path txtfilepath : txtFilePaths) {
-            List<String> txtFile = Files.readAllLines(txtfilepath, Charset.forName("Windows-1250"));
-            List<String> result = syllabize(TextFormater.format(txtFile));
-            writeSyllabizedFile(txtfilepath, result);
-        }
-
-        for (Path docfilepath : docFilePaths) {
-            List<String> docFile = DocReader.readDocFile(docfilepath);
-            List<String> result = syllabize(TextFormater.format(docFile));
-            writeSyllabizedFile(docfilepath, result);
-        }
-        for (Path docxfilepath : docxFilePaths) {
-            List<String> docxFile = DocReader.readDocFile(docxfilepath);
-            List<String> result = syllabize(TextFormater.format(docxFile));
-            writeSyllabizedFile(docxfilepath, result);
         }
     }
 
+    private static void sylabizeAndSaveFile(List<Path> paths) throws IOException {
+        for (Path path : paths) {
+            List<String> docPath = getDocPath(path);
+            List<String> result = syllabize(TextFormater.format(docPath));
+            writeSyllabizedFile(path, result);
+        }
+    }
+
+    private static List<String> getDocPath(Path path) throws IOException {
+        String fileName = path.getFileName().toString();
+        int length = fileName.length();
+        String fileType = fileName.substring(length - 3, length);
+        switch (fileType) {
+            case "txt":
+                return Files.readAllLines(path, Charset.forName("Windows-1250"));
+            case "doc":
+                return DocReader.readDocFile(path);
+            case "docx":
+                return DocReader.readDocxFile(path);
+        }
+        return new ArrayList<>();
+    }
 }
